# ACSync

./: .gitignore  ACSync.csproj  ACSync.slnx  CLI.cs  README-CN.md  README.md  SyncManifest.cs  SyncPatch.cs
.github/workflows/: publish.yml
ACSync.CIL/: ACSync.CIL.csproj  ACSync.CLI.csproj  CLI.cs  README.md
ACSync.CLI/: ACSync.CLI.csproj  CLI.cs  README.md
ACSync.Core/: ACSync.Core.csproj  README.md  SyncManifest.cs  SyncPatch.cs
ACSync.Npm/: README.md  index.d.ts  index.js  package.json
ACSync.Python/: README.md  pyproject.toml
ACSync.Python/acsync/: __init__.py
